# ASCII

./: .gitignore  .gitmodules  LICENSE  README.md
ASCII/: CMakeLists.txt  compile_mingw.bat  dcg_setup.cmake  make.bat  make_mingw.bat  make_vs.ps1  test.ps1
ASCII/projects/Ascii/: CMakeLists.txt
ASCII/projects/Ascii/include/Systems/: ButtonManager.h  FocusManager.h  MouseManager.h  TextManager.h  UpdateManager.h  WidgetManager.h
ASCII/projects/Ascii/include/Systems/Input/: ButtonManager.h  FocusManager.h  InputManager.h  MouseManager.h  StateManager.h  TextManager.h
ASCII/projects/Ascii/include/Widget/: DrawParams.h  Widget.h
ASCII/projects/Ascii/include/Window/: BlockFont.h  Window.h
ASCII/projects/Ascii/source/Systems/: ButtonManager.cpp  FocusManager.cpp  MouseManager.cpp  TextManager.cpp  UpdateManager.cpp  WidgetManager.cpp
ASCII/projects/Ascii/source/Systems/Input/: ButtonManager.cpp  FocusManager.cpp  InputManager.cpp  MouseManager.cpp  StateManager.cpp  TextManager.cpp
ASCII/projects/Ascii/source/Widget/: DrawParams.cpp  Widget.cpp
ASCII/projects/Ascii/source/Window/: BlockFont.cpp  Window.cpp
ASCII/projects/Ascii/test/: CMakeLists.txt
ASCII/projects/Ascii/test/Systems/: ButtonManagerTest.cpp  FocusManagerTest.cpp  MouseManagerTest.cpp  TextManagerTest.cpp  UpdateManagerTest.cpp  WidgetManagerTest.cpp
ASCII/projects/Ascii/test/Systems/Input/: ButtonManagerTest.cpp  FocusManagerTest.cpp  InputManagerTest.cpp  MouseManagerTest.cpp  StateManagerTest.cpp  TextManagerTest.cpp
ASCII/projects/Ascii/test/Widget/: DrawParamsTest.cpp  WidgetTest.cpp
ASCII/projects/Ascii/test/Window/: WindowTest.cpp
ASCII/projects/BlockFontConversion/: CMakeLists.txt
ASCII/projects/BlockFontConversion/source/: Main.cpp
ASCII/projects/Cardad/: CMakeLists.txt
ASCII/projects/Cardad/source/: Main.cpp
ASCII/projects/DcTestUtility/: CMakeLists.txt
ASCII/projects/DcTestUtility/include/Helpers/: TestHelpers.h
ASCII/projects/DcTestUtility/test/: CMakeLists.txt
ASCII/projects/DcTestUtility/test/Helpers/: TestHelpersTest.cpp
ASCII/projects/DcUtility/: CMakeLists.txt
ASCII/projects/DcUtility/include/: DcUtility.natvis  Debug.h
ASCII/projects/DcUtility/include/Containers/: DynamicArray.h  Grid.h
ASCII/projects/DcUtility/include/General/: Color.h  Delagate.h  Direction.h
ASCII/projects/DcUtility/include/Helpers/: TemplateHelpers.h
ASCII/projects/DcUtility/include/Math/: Matrix.h  Vector.h
ASCII/projects/DcUtility/include/Math/Shapes2D/: Circle.h  Collision.h  ConvexHull.h  ForwardDeclarations.h  Line.h  LineSegment.h  Polygon.h  Ray.h  Rect.h
ASCII/projects/DcUtility/include/Parsers/: Gast.h  Tgast.h
ASCII/projects/DcUtility/source/: Color.cpp
ASCII/projects/DcUtility/source/General/: Color.cpp
ASCII/projects/DcUtility/source/Math/Shapes2D/: Circle.cpp  Collision.cpp  ConvexHull.cpp  Line.cpp  LineSegment.cpp  Polygon.cpp  Ray.cpp  Rect.cpp
ASCII/projects/DcUtility/source/Parsers/: Gast.cpp  Tgast.cpp
ASCII/projects/DcUtility/test/: CMakeLists.txt  DebugTest.cpp  TemplateHelpersTest.cpp
ASCII/projects/DcUtility/test/Containers/: DynamicArrayTest.cpp  GridTest.cpp
ASCII/projects/DcUtility/test/General/: DelagateTest.cpp
ASCII/projects/DcUtility/test/Helpers/: TemplateHelpersTest.cpp
ASCII/projects/DcUtility/test/Math/: MatrixTest.cpp  VectorTest.cpp
ASCII/projects/DcUtility/test/Math/Shapes2D/: CircleTest.cpp  CollisionTest.cpp  ConvexHullTest.cpp  LineSegmentTest.cpp  LineTest.cpp  PolygonTest.cpp  RayTest.cpp  RectTest.cpp
ASCII/projects/DcUtility/test/Parsers/: GastTest.cpp  TgastTest.cpp
ASCII/projects/Game/: CMakeLists.txt
ASCII/projects/Game/source/: Main.cpp
ASCII/projects/Gridgame/: CMakeLists.txt
ASCII/projects/Gridgame/source/: Main.cpp
ASCII/projects/Idlegame/: CMakeLists.txt
ASCII/projects/Idlegame/source/: Main.cpp
ASCII/projects/Metagame/: CMakeLists.txt
ASCII/projects/Metagame/source/: Main.cpp
ASCII/projects/Metagame2/: CMakeLists.txt
ASCII/projects/Metagame2/source/: Main.cpp
ASCII/projects/Numbergame/: CMakeLists.txt
ASCII/projects/Numbergame/source/: Main.cpp
ASCII/projects/SolifortGame/: CMakeLists.txt
ASCII/projects/SolifortGame/source/: Main.cpp
ASCII/projects/VisualTest/: CMakeLists.txt
ASCII/projects/VisualTest/source/: Main.cpp
ASCII/projects/VisualTest2/: CMakeLists.txt
ASCII/projects/VisualTest2/source/: Main.cpp
ASCII/projects/VisualTest3/: CMakeLists.txt
ASCII/projects/VisualTest3/source/: Main.cpp
ASCII/projects/WaveFunctionCollapse/: CMakeLists.txt
ASCII/projects/WaveFunctionCollapse/source/: Main.cpp
